Added working service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,13 +8,30 @@
 <h2>Here are some links to help you start: </h2>
 <ul>
   <li>
-    <h2><a target="_blank" href="https://angular.io/tutorial">Tour of Heroes</a></h2>
+    <h2>
+      <a target="_blank" href="https://angular.io/tutorial">Tour of Heroes</a>
+    </h2>
   </li>
   <li>
-    <h2><a target="_blank" href="https://github.com/angular/angular-cli/wiki">CLI Documentation</a></h2>
+    <h2>
+      <a target="_blank" href="https://github.com/angular/angular-cli/wiki">CLI Documentation</a>
+    </h2>
   </li>
   <li>
-    <h2><a target="_blank" href="http://angularjs.blogspot.ca/">Angular blog</a></h2>
+    <h2>
+      <a target="_blank" href="http://angularjs.blogspot.ca/">Angular blog</a>
+    </h2>
   </li>
 </ul>
 
+<div *ngIf="students; else elseBlock" class="ui text container">
+  <h1>Our MongoDB is Working!</h1>
+  <div class="ui segments">
+    <div class="ui segment" *ngFor="let student of students">{{ student.name }}</div>
+  </div>
+</div>
+<ng-template #elseBlock>
+  <div class="ui text container">
+    <h1>Our MongoDB is not Working!</h1>
+  </div>
+</ng-template>
