--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,6 @@
     <a [routerLink]="['students']" class="item">Student</a>
   </div>
 </div>
-<div class="ui main text container">
+<div class="ui main container">
   <router-outlet></router-outlet>
 </div>
