--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,22 @@
-<h1>Welcome to OneSchool!</h1>
+<!-- <div class="ui container">
+    <div class="ui text container">
+        <div class="">
+            <h1 class="ui center aligned header">Welcome to OneSchool!</h1>
+            <img class="ui center aligned" src="http://www.clker.com/cliparts/Z/F/Y/E/X/y/logo-school.svg" alt="OneSchool" width="60%">
+        </div>
+    </div>
+</div> -->
+<div class="pusher">
+    <div class="ui vertical masthead center aligned segment">
+        <div class="ui text container">
+            <h1 class="ui header">
+                Welcome to OneSchool!
+            </h1>
+            <img class="ui" src="http://www.clker.com/cliparts/Z/F/Y/E/X/y/logo-school.svg" alt="OneSchool" width="60%">
+            <h2>Excellence & Empowerment</h2>
+            <a class="ui grey basic button" [routerLink]="['students']">View Students
+                <i class="right arrow icon"></i>
+            </a>
+        </div>
+    </div>
+</div>
