--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,7 +14,7 @@
             </h1>
             <img class="ui" src="http://www.clker.com/cliparts/Z/F/Y/E/X/y/logo-school.svg" alt="OneSchool" width="60%">
             <h2>Excellence & Empowerment</h2>
-            <a class="ui grey basic button" [routerLink]="['students']">View Students
+            <a class="ui huge black basic button" [routerLink]="['students']">View Students
                 <i class="right arrow icon"></i>
             </a>
         </div>
